added put request for mods
