# models/mods.js
@@ -27,4 +27,28 @@ modsModel.createMod = async function (mod) {
     return await getDB().insertOne(mod);
 }
 
+modsModel.updateMod = async function (id, newInfo) {
+    const ogMod = await this.getSingle(id);
+
+    // testing
+    console.log(ogMod.toString());
+
+    result = await getDB().updateOne(
+        { _id: id },
+        {
+            $set: {
+                name: newInfo.name ?? ogMod.name,
+                copies: newInfo.copies ?? ogMod.copies,
+                c_rank: newInfo.c_rank ?? ogMod.c_rank,
+                max_rank: newInfo.max_rank ?? ogMod.max_rank,
+                equip_id: newInfo.equip_id ?? ogMod.equip_id,
+                rarity: newInfo.rarity ?? ogMod.rarity,
+                in_set: newInfo.in_set ?? ogMod.in_set,
+            }
+        }
+    );
+
+    return "Update Successful";
+}
+
 module.exports = modsModel;
